[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.4,<4"]

[project]
authors = [{name = "xinetzone", email = "735613050@qq.com"}]
dynamic = ["version", "description"]
license = {file = "LICENSE"}
name = "visionz"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "d2py",
]


maintainers = [
  {name = "xinetzone", email = "735613050@qq.com"},
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Theme",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.urls]
Home = "https://github.com/xinetzone/vision"

[project.optional-dependencies]
doc = [
  "myst-nb",
  "xyzstyle",
  "ipywidgets>=8.0.2", # ==7.7.2
  "sphinxext-rediraffe",
  "sphinx-copybutton",
  "plotly-geo",
  "streamlit",
  "sphinx-plotly-directive",
  "dash-vtk",
  "hypercorn",
  # 'strawberry-graphql[debug-server]',
  "sklearn-xarray",
  "pip-tools",
  "rtree",
  "ipykernel",
  "osmnx",
  "PyKrige",
  "census",
  "us",
  "rasterio",
  "kaleido",
  # "geoplot"
  "sphinx-design",
  "plotly",
  "pyarrow",
  "pandas",
  "fastapi",
  "dash",
  "gradio",
  "diskcache",
  "multiprocess",
  "strawberry-graphql[fastapi]",
  "python-multipart",
  "nicegui",
  "invoke",
]

coverage = [
  "pytest-cov",
  "pytest-regressions",
  "codecov",
  "vision[test]",
]
dev = [
  "pyyaml",
  "pre-commit",
  "vision[coverage]",
]
test = [
  "pytest",
  "vision[doc]",
]

[project.entry-points]
"sphinx.html_themes" = {vision = "visionz"}

[tool.flit.sdist]
# include = ["doc/"]
exclude = ['doc', '.git', '.github']
